--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -36,3 +36,47 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  border-bottom: 1px solid #a5a1a2;
+  max-width: 90%;
+  display: flex;
+  margin: 0 auto;
+}
+
+.links {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+h1 {
+  color: #4439a7;
+  margin-left: 0px 20px;
+}
+
+.link {
+  color: pink;
+  text-decoration: none;
+  margin-right: 20px;
+}
+
+.link:hover {
+  color: blue;
+}
+
+.headerStyle{
+  border: 1px solid black;
+  background-color: #61dafb;
+}
+.homeStyle {
+  border: 1px solid black;
+  background-color: #cca0bf;;
+  height: 600px;
+}
+
+.footerStyle {
+  border: 1px solid black;
+  background-color: #61dafb;
+  max-height: 50px;
+}
