--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -1,47 +1,26 @@
+/* 
+*{
+  box-sizing:border-box;
+  height: 0px;
+  width: 0px;
+} */
+
 .App {
   text-align: center;
+  width: 98%;
+  height:98%;
+  margin: 1%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .navbar {
   border-bottom: 1px solid #a5a1a2;
   max-width: 90%;
   display: flex;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .links {
@@ -71,12 +50,28 @@ h1 {
 }
 .homeStyle {
   border: 1px solid black;
-  background-color: #cca0bf;;
-  height: 600px;
+  /* background-color: #cca0bf; */
+  max-height: 600px;
+  overflow-y: scroll;
 }
 
+.homeTableStyle {
+  border: 1px solid green;
+  display:inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  width: 47%;
+}
+
+.homeFormStyle {
+  border: 1px solid green;
+  display:inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  width: 47%;
+}
 .footerStyle {
   border: 1px solid black;
   background-color: #61dafb;
-  max-height: 50px;
+
 }
