--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -27,6 +27,7 @@
   margin-left: auto;
   display: flex;
   align-items: center;
+  font-size: 25px;
 }
 
 h1 {
@@ -51,24 +52,27 @@ h1 {
 .homeStyle {
   border: 1px solid black;
   /* background-color: #cca0bf; */
-  max-height: 600px;
-  overflow-y: scroll;
+  height: 50%;
+  margin: 1%;
+  /* overflow-y: scroll; */
 }
 
 .homeTableStyle {
   border: 1px solid green;
   display:inline-block;
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 47%;
+  margin: 1%;
+  width: 64%;
+  overflow-y: scroll;
+  height: 50%;
 }
 
 .homeFormStyle {
   border: 1px solid green;
   display:inline-block;
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 47%;
+  margin: 1%;
+  width: 30%;
+  height: 80%;
+  overflow-y: scroll;
 }
 .footerStyle {
   border: 1px solid black;
