--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .homeFormStyle {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   display:inline-block;
   margin: 1%;
   width: 30%;
@@ -78,4 +78,21 @@ h1 {
   border: 1px solid black;
   background-color: #61dafb;
 
+}
+
+
+.resetButtonStyle{
+  margin:'5px';
+  padding:'3px';
+  font-size:'25px';
+  background-color:'red';
+ border-radius:'8px';
+}
+
+.submitButtonStyle{
+  margin:'5px';
+  padding:'3px';
+  font-size:'25px';
+  background-color:'green';
+ border-radius:'8px';
 }
